--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <div class="image-container">
             <div class="image-placeholder">
-                <img src="mc_rhamon1.jpg" alt="MC Rhamon 1">
+                <img src="https://media.fstatic.com/Z9STcotRtR3bdTWdNNT3BCCN-8c=/195x289/smart/filters:format(webp)/media/artists/avatar/2022/07/mc-rhamon_a677609.jpg" alt="MC Rhamon 1">
             </div>
         </div>
 
