--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
         <!-- Linha de imagens -->
         <div class="image-row">
             <div class="image-container">
-                <img src="https://i.pinimg.com/originals/03/f0/48/03f048d247f1191f1d9cee2c6741bf1b.jpg" alt="Imagem 1">
+                <img src="https://i.pinimg.com/originals/03/f0/48/03f048d247f1191f1d9cee2c6741bf1b.jpg" alt="Mc rhamon 1">
             </div>
             <div class="image-container">
-                <img src="https://p2.trrsf.com.br/image/fget/cf/540/960/smart/images.terra.com/2023/08/10/card6-reproducao-instagrammcrhamon-vb94kn95895x.png" alt="Imagem 2">
+                <img src="https://p2.trrsf.com.br/image/fget/cf/540/960/smart/images.terra.com/2023/08/10/card6-reproducao-instagrammcrhamon-vb94kn95895x.png" alt="Mc rhamon 2">
             </div>
             <div class="image-container">
-                <img src="https://i.pinimg.com/736x/3d/7f/a7/3d7fa7c1be135a469cf528a028bed373.jpg" alt="Imagem 3">
+                <img src="https://i.pinimg.com/736x/3d/7f/a7/3d7fa7c1be135a469cf528a028bed373.jpg" alt="Mc rhamon 3">
             </div>
         </div>
     </div>
