--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Página Roxa com Imagens em Linha</title>
     <style>
         body {
-            background-color: #4B0082; /* Roxo escuro */
+            background-color: #2b1c36; /* Roxo escuro */
             color: #FFFFFF; /* Texto branco */
             font-family: Arial, sans-serif;
             text-align: center;
