--- a/index.html
+++ b/index.html
@@ -31,31 +31,26 @@
         .image-row {
             display: flex; /* Layout flexível para colocar as imagens lado a lado */
             justify-content: space-between; /* Espaço entre as imagens */
-            gap: 10px; /* Espaçamento entre as imagens */
+            gap: 20px; /* Espaçamento entre as imagens */
         }
 
         .image-container {
             flex: 1; /* Faz com que as imagens ocupem o espaço disponível igualmente */
             max-width: 30%; /* Largura máxima de cada imagem */
+            text-align: center;
         }
 
         .image-container img {
-            width: 100%; /* Faz a imagem ocupar todo o espaço do container */
-            height: auto;
-            border-radius: 10px;
-            border: 2px solid #FFFFFF;
+            width: 150px; /* Tamanho fixo para as imagens (quadrado) */
+            height: 150px; /* Tamanho fixo para as imagens (quadrado) */
+            border-radius: 50%; /* Borda circular */
+            border: 3px solid #FFFFFF; /* Borda branca */
+            object-fit: cover; /* Garante que a imagem cubra o espaço sem distorcer */
         }
 
-        .image-placeholder {
-            width: 100%;
-            height: 200px;
-            background-color: #9370DB; /* Roxo claro */
-            border-radius: 10px;
-            border: 2px dashed #FFFFFF;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 1.2em;
+        .image-caption {
+            margin-top: 10px; /* Espaço abaixo da imagem para escrever */
+            font-size: 1.1em;
             color: #FFFFFF;
         }
     </style>
@@ -69,12 +64,15 @@
         <div class="image-row">
             <div class="image-container">
                 <img src="https://i.pinimg.com/originals/03/f0/48/03f048d247f1191f1d9cee2c6741bf1b.jpg" alt="Mc rhamon 1">
+                <div class="image-caption">Legenda 1</div>
             </div>
             <div class="image-container">
                 <img src="https://p2.trrsf.com.br/image/fget/cf/540/960/smart/images.terra.com/2023/08/10/card6-reproducao-instagrammcrhamon-vb94kn95895x.png" alt="Mc rhamon 2">
+                <div class="image-caption">Legenda 2</div>
             </div>
             <div class="image-container">
                 <img src="https://i.pinimg.com/736x/3d/7f/a7/3d7fa7c1be135a469cf528a028bed373.jpg" alt="Mc rhamon 3">
+                <div class="image-caption">Legenda 3</div>
             </div>
         </div>
     </div>
