--- a/index.html
+++ b/index.html
@@ -40,11 +40,18 @@
             text-align: center;
         }
 
-        .image-container img {
-            width: 150px; /* Tamanho fixo para as imagens (quadrado) */
-            height: 150px; /* Tamanho fixo para as imagens (quadrado) */
-            border-radius: 50%; /* Borda circular */
+        .image-frame {
+            width: 150px; /* Tamanho fixo para a moldura (quadrado) */
+            height: 150px; /* Tamanho fixo para a moldura (quadrado) */
             border: 3px solid #FFFFFF; /* Borda branca */
+            border-radius: 10px; /* Borda levemente arredondada */
+            overflow: hidden; /* Garante que a imagem não ultrapasse a moldura */
+            margin: 0 auto; /* Centraliza a moldura */
+        }
+
+        .image-frame img {
+            width: 100%; /* Faz a imagem ocupar todo o espaço da moldura */
+            height: 100%; /* Faz a imagem ocupar todo o espaço da moldura */
             object-fit: cover; /* Garante que a imagem cubra o espaço sem distorcer */
         }
 
@@ -63,15 +70,21 @@
         <!-- Linha de imagens -->
         <div class="image-row">
             <div class="image-container">
-                <img src="https://i.pinimg.com/originals/03/f0/48/03f048d247f1191f1d9cee2c6741bf1b.jpg" alt="Mc rhamon 1">
+                <div class="image-frame">
+                    <img src="https://i.pinimg.com/originals/03/f0/48/03f048d247f1191f1d9cee2c6741bf1b.jpg" alt="Mc rhamon 1">
+                </div>
                 <div class="image-caption">Legenda 1</div>
             </div>
             <div class="image-container">
-                <img src="https://p2.trrsf.com.br/image/fget/cf/540/960/smart/images.terra.com/2023/08/10/card6-reproducao-instagrammcrhamon-vb94kn95895x.png" alt="Mc rhamon 2">
+                <div class="image-frame">
+                    <img src="https://p2.trrsf.com.br/image/fget/cf/540/960/smart/images.terra.com/2023/08/10/card6-reproducao-instagrammcrhamon-vb94kn95895x.png" alt="Mc rhamon 2">
+                </div>
                 <div class="image-caption">Legenda 2</div>
             </div>
             <div class="image-container">
-                <img src="https://i.pinimg.com/736x/3d/7f/a7/3d7fa7c1be135a469cf528a028bed373.jpg" alt="Mc rhamon 3">
+                <div class="image-frame">
+                    <img src="https://i.pinimg.com/736x/3d/7f/a7/3d7fa7c1be135a469cf528a028bed373.jpg" alt="Mc rhamon 3">
+                </div>
                 <div class="image-caption">Legenda 3</div>
             </div>
         </div>
