--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         }
 
         .image-frame {
-            width: 150px; /* Tamanho fixo para a moldura (quadrado) */
-            height: 150px; /* Tamanho fixo para a moldura (quadrado) */
+            width: 200px; /* Largura da moldura retangular */
+            height: 150px; /* Altura da moldura retangular */
             border: 3px solid #FFFFFF; /* Borda branca */
             border-radius: 10px; /* Borda levemente arredondada */
             overflow: hidden; /* Garante que a imagem não ultrapasse a moldura */
@@ -50,8 +50,8 @@
         }
 
         .image-frame img {
-            width: 100%; /* Faz a imagem ocupar todo o espaço da moldura */
-            height: 100%; /* Faz a imagem ocupar todo o espaço da moldura */
+            width: 100%; /* Faz a imagem ocupar toda a largura da moldura */
+            height: 100%; /* Faz a imagem ocupar toda a altura da moldura */
             object-fit: cover; /* Garante que a imagem cubra o espaço sem distorcer */
         }
 
