--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         }
 
         .image-frame {
-            width: 200px; /* Largura da moldura retangular */
-            height: 150px; /* Altura da moldura retangular */
+            width: 150px; /* Largura da moldura retangular vertical */
+            height: 200px; /* Altura da moldura retangular vertical */
             border: 3px solid #FFFFFF; /* Borda branca */
             border-radius: 10px; /* Borda levemente arredondada */
             overflow: hidden; /* Garante que a imagem não ultrapasse a moldura */
