--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
 
         .container {
-            max-width: 800px; /* Largura máxima do container */
+            max-width: 1000px; /* Largura máxima do container aumentada */
             margin: 0 auto; /* Centraliza o container */
             padding: 20px;
             background-color: #800080; /* Roxo médio */
@@ -41,8 +41,8 @@
         }
 
         .image-frame {
-            width: 150px; /* Largura da moldura retangular vertical */
-            height: 200px; /* Altura da moldura retangular vertical */
+            width: 200px; /* Largura da moldura retangular vertical aumentada */
+            height: 300px; /* Altura da moldura retangular vertical aumentada */
             border: 3px solid #FFFFFF; /* Borda branca */
             border-radius: 10px; /* Borda levemente arredondada */
             overflow: hidden; /* Garante que a imagem não ultrapasse a moldura */
