--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
                     <img src="https://i.pinimg.com/736x/3d/7f/a7/3d7fa7c1be135a469cf528a028bed373.jpg" alt="Mc rhamon 3">
                 </div>
                 <div class="image-caption">MC RHAMON</div>
+     
+
+
+            <div class="image-container">
+                    <div class="image-frame">
+                        <img src="https://i.pinimg.com/1200x/0c/7b/b0/0c7bb0360e81f393c754634ce69e3800.jpg" alt="Mc rhamon 3">
+                    </div>
+                    <div class="image-caption">MC RHAMON</div>
             </div>
         </div>
     </div>
