--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
             
         </div>
     </div>
+    <footer>
 
+        <div class="rodapesuper"></div>
+    </footer>
+    
 </body>
-
-<footer>
-    <div class=""></div>
-</footer>
 </html>
