--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
                     <img src="https://i.pinimg.com/736x/7b/68/02/7b6802ac3704f941b4a833c979fc8c98.jpg" alt="Mc rhamon 3">
                 </div>
                 <div class="image-caption">MC RHAMON</div>
+                <div class="image-container">
+                    <div class="image-frame">
+                        <img src="https://p2.trrsf.com/image/fget/cf/774/0/images.terra.com/2025/02/05/1359119259-img9450-scaled-e1738788674533.jpeg" alt="Mc rhamon 1">
+                    </div>
+                    <div class="image-caption">MC RHAMON</div>
 
             
         </div>
