--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
                         <img src="https://p2.trrsf.com/image/fget/cf/774/0/images.terra.com/2025/02/05/1359119259-img9450-scaled-e1738788674533.jpeg" alt="Mc rhamon 1">
                     </div>
                     <div class="image-caption">MC RHAMON</div>
+                    <div class="image-frame">
+                        <img src="https://i.ytimg.com/vi/REbCFipggSw/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLBM9lIfWXpnnYfbLtXgkrheVKnhBg" alt="Mc rhamon 1">
+                    </div>
+                    <div class="image-caption">MC RHAMON</div>
 
             
         </div>
