--- a/index.html
+++ b/index.html
@@ -76,6 +76,15 @@
 
     <div class="container">
 
+        <div class="image-container">
+
+
+            <div class="image-frame">
+                <img src="https://i.ytimg.com/vi/REbCFipggSw/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLBM9lIfWXpnnYfbLtXgkrheVKnhBg" alt="Mc rhamon 1">
+            </div>
+         <div class="image-caption">MC RHAMON</div>
+        </div>
+
     </div>
 
 
