--- a/index.html
+++ b/index.html
@@ -80,6 +80,20 @@
                     <div class="image-caption">MC RHAMON</div>
                 </div>
 
+                <div class="image-container">
+                    <div class="image-frame">
+                        <img src="img/images.jpeg" alt="MC RHAMON">
+                    </div>
+                    <div class="image-caption">MC RHAMON</div>
+                </div>
+
+
+
+
+
+
+               
+
         </div>
     </div>
 
@@ -93,6 +107,6 @@
 <footer>
     <div class="rodapesuper"></div>
 
-    <img src="img/images.jpeg" alt="MC RHAMON">
+  
 </footer>
 </html>
