--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     
             <div class="image-container">
                 <div class="image-frame">
-                    <img src="https://i.pinimg.com/736x/7b/68/02/7b6802ac3704f941b4a833c979fc8c98.jpg" alt="Mc rhamon 3">
+                    <img src=https://akamai.sscdn.co/tb/palcomp3-fotos/2/6/e/9/mcrhamon-3e652830-a8e5-4e67-98ba-1d82a49c6f4b.jpg>
                 </div>
                 <div class="image-caption">MC RHAMON</div>
             </div>
