--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 
                 <div class="image-frame">
-                    <img src="https://i.ytimg.com/vi/REbCFipggSw/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLBM9lIfWXpnnYfbLtXgkrheVKnhBg" alt="Mc rhamon 1">
+                    <img src=https://lh3.googleusercontent.com/proxy/RG0UdVU2HdaIKoWR7Bo8FU8Eo0oV11YIV-pNyTzg6HYLQvK9YO00ixnwkhVvII3JPxgxqYtGQpEXBpejXlQy6V6abryrOZz0PiLwzzr8U3nHQMocytIlL4yhRvxlJQ>
                 </div>
              <div class="image-caption">MC RHAMON</div>
             </div>
