--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
                 <div class="image-container">
                     <div class="image-frame">
-                        <img src="img/images.jpeg" alt="MC RHAMON">
+                        <img src=https://conteudo.imguol.com.br/c/splash/ad/2025/04/04/mc-rhamon-1743794300130_v2_4x3.jpg> alt="MC RHAMON">
                     </div>
                     <div class="image-caption">MC RHAMON</div>
                 </div>
