--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css"> <!-- Link para o arquivo CSS -->
 </head>
 <body>
+    <div class="rodapesuper"></div>
 
     <div class="container">
         <h1>MC RHAMON</h1>
