--- a/index.html
+++ b/index.html
@@ -130,6 +130,13 @@
                     <div class="image-caption">MC RHAMON</div>
                 </div>
 
+                 <div class="image-container">
+                    <div class="image-frame">
+                        <img src=https://p2.trrsf.com.br/image/fget/cf/540/960/smart/images.terra.com/2023/08/10/card4-reproducao-instagrammcrhamon-rkzjqiaxzz93.png> alt="MC RHAMON">
+                    </div>
+                    <div class="image-caption">MC RHAMON</div>
+                </div>
+
 
 
         </div>
